--- a/src/main/resources/static/css/item_list_post.css
+++ b/src/main/resources/static/css/item_list_post.css
@@ -33,6 +33,7 @@
     border-radius: 50%;
     height: 80px;
     width: 80px;
+    background: white;
     border: 3px solid var(--background-color);
     margin-left: 5px;
     transition: background ease-out 200ms;
