--- a/src/main/resources/templates/group.html
+++ b/src/main/resources/templates/group.html
@@ -134,7 +134,7 @@
                 <tr th:each="post : ${posts}">
                     <td>
                         <!--Пост-->
-                        <div class="block_div" style="padding: 5px 5px 20px; height: auto; margin-bottom: 5px;">
+                        <div class="block_div" style="padding: 5px 5px 20px; height: auto; margin-bottom: 10px;">
                             <div class="div_post_item_list">
                                 <div class="row">
                                     <div class="col-2 col-md-1">
@@ -229,8 +229,7 @@
                                                 <p class="name_group_item_list" th:text="${group.getName()}"> Имя </p>
                                                 <div class="main_div_group_item_list">
                                                     <div class="icon_div_group_item_list">
-                                                        <!--<i class="fa-solid fa-user" style="fill: var(&#45;&#45;main-color);"></i>-->
-                                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg>
+                                                        <i class="fa-solid fa-user"></i>
                                                     </div>
                                                     <div class="subscribes_div_group_item_list">
                                                         <p class="subscribes_p_group_item_list"
@@ -404,31 +403,5 @@
             }
         });
     }
-</script>
-<script>
-    const FILE_INPUT = document.querySelector("input[type=file]");
-    const AVATAR = document.getElementById("avatar");
-    AVATAR.addEventListener("click", () => FILE_INPUT.click());
-    FILE_INPUT.addEventListener("change", event => {
-        const file = event.target.files[0];
-        const reader = new FileReader();
-        reader.readAsDataURL(file);
-        reader.onloadend = () => {
-            AVATAR.setAttribute("aria-label", file.name);
-            AVATAR.src = `${reader.result}`;
-            const formData = {
-                url: reader.result
-            };
-            $.ajax({
-                url: "/changeImg",
-                type: "POST",
-                data: formData,
-                success: function (authResponse) {
-                }
-            });
-        };
-    });
-    document.addEventListener('DOMContentLoaded', function () {
-    }, false);
 </script>
 </html>
