--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" th:href="@{/css/search.css}"/>
     <script type="text/javascript" th:src="@{/js/getThemeFromCookie.js}"></script>
     <script type="text/javascript" th:src="@{/js/dateTimeEdit.js}"></script>
+    <script type="text/javascript" th:src="@{/js/like.js}"></script>
     <!--Картинки-->
     <script src="https://kit.fontawesome.com/9e56eb5395.js" crossorigin="anonymous"></script>
 
@@ -105,10 +106,12 @@
             <div style="margin-top: 50px; margin-left: 50px; height: 100px; width: 600px;">
                 <div class="block_div" style="margin-top: 0px; height: 75px; width: 600px;">
                     <div>
-                        <button class="btn btn-primary c-button" style="width: 150px; margin-left: 0px; margin-top: 15px;" onclick="PopUpShow();">
+                        <button class="btn btn-primary c-button"
+                                style="width: 150px; margin-left: 0px; margin-top: 15px;" onclick="PopUpShow();">
                             Новости
                         </button>
-                        <button class="btn btn-primary c-button" style="width: 150px; margin-left: 10px; margin-top: 15px;" onclick="PopUpShow();">
+                        <button class="btn btn-primary c-button"
+                                style="width: 150px; margin-left: 10px; margin-top: 15px;" onclick="PopUpShow();">
                             Рекомендации
                         </button>
                     </div>
@@ -116,72 +119,80 @@
                 </div>
 
             </div>
-            <table style="margin-top: -40px; height: 650px; width: 600px; margin-left: 50px;"
-                   >
+            <table style="margin-top: -40px; height: 650px; width: 600px; margin-left: 50px;">
                 <tbody>
                 <tr th:each="post : ${posts}">
                     <td>
-                        <div th:each="group : ${groups}">
-                            <div th:if="${group.getId()} == ${post.getIdGroup()}">
-                                <!--Пост-->
-                                <div class="block_div" style="padding: 5px 5px 20px; height: auto; margin-bottom: 5px;">
-                                    <div class="div_post_item_list">
-                                        <div class="row">
-                                            <div class="col-2 col-md-1">
-                                                <img class="figure_img_post_item_list" alt="image"
-                                                     th:src="${group.getAvtar()}"/>
-                                            </div>
-                                            <div class="col align-self-center" style="margin-left: -30px;">
-                                                <p class="name_post_item_list p-text-color"
-                                                   th:text="${group.getName()}"></p>
-                                                <div>
-                                                    <p class="date_p_post_item_list p-text-color"></p>
-                                                    <script th:inline="javascript">
-                                                        showMessage([[${post.getDatePublication()}]]);
-                                                    </script>
+                        <!--Пост-->
+                        <div class="block_div" style="padding: 5px 5px 20px; height: auto; margin-bottom: 5px;">
+                            <div class="div_post_item_list">
+                                <div class="row" th:each="group : ${groups}">
+                                    <div class="col-2 col-md-1" th:if="${post.getIdGroup() == group.getId()}">
+                                        <img class="figure_img_post_item_list" alt="image"
+                                             th:src="${group.getAvtar()}"/>
+                                    </div>
+                                    <div class="col align-self-center" style="margin-left: -30px;" th:if="${post.getIdGroup() == group.getId()}">
+                                        <p class="name_post_item_list p-text-color"
+                                           th:text="${group.getName()}"></p>
+                                        <div>
+                                            <p class="date_p_post_item_list p-text-color"></p>
+                                            <script th:inline="javascript">
+                                                showMessage([[${post.getDatePublication()}]]);
+                                            </script>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col align-self-center" style="margin-left: 0px; align-content: center">
+                                        <p class="p-text-color"
+                                           style="text-align: start; margin-left: 0px; margin-right: 0px; width: 525px; height: auto; max-height:120px; overflow-y: auto;"
+                                           th:text="${post.getDescription()}"></p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col align-self-center" style="margin-left: 0px;">
+                                        <img style="align-content: start; margin-left: -50px; margin-top: 0px; margin-right: 0px; height: 310px; width: 525px;"
+                                             th:src="${post.getImg()}"/>
+                                    </div>
+                                </div>
+                                <div class="row" style="margin-top: 15px;">
+                                    <div class="col align-self-center"
+                                         style="margin-left: 0px; justify-content: space-between;">
+                                        <div class="like-container row">
+                                            <button class="btn btn-primary"
+                                                    th:onclick="'like(\'' + ${post.getId()} + '\');'"
+                                                    style="margin-left: 0px; width: 80px; height: 40px;">
+                                                <i class="fa-regular fa-heart fa-bounce"
+                                                   style="fill: var(--second-color); pointer-events: none;cursor: default;"></i>
+                                                <div th:each="like : ${likes}" style="display: none;">
+                                                    <div th:if="${like.getPostUserId().getUserId()==userLogin.getId()}">
+                                                        <div th:if="${like.getPostUserId().getPostId() == post.getId()}">
+                                                            <script th:inline="javascript">
+                                                                matchLike();
+                                                            </script>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col align-self-center"
-                                                 style="margin-left: 0px; align-content: center">
-                                                <p class="p-text-color"
-                                                   style="text-align: start; margin-left: 0px; margin-right: 0px; width: 525px; height: auto; max-height:120px; overflow-y: auto;"
-                                                   th:text="${post.getDescription()}"></p>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col align-self-center" style="margin-left: 0px;">
-                                                <img style="align-content: start; margin-left: -50px; margin-top: 0px; margin-right: 0px; height: 310px; width: 525px;"
-                                                     th:src="${post.getImg()}"/>
-                                            </div>
-                                        </div>
-                                        <div class="row" style="margin-top: 15px;">
-                                            <div class="col align-self-center"
-                                                 style="margin-left: 0px; display: flex; justify-content: space-between;">
-                                                <div class="like-container">
-                                                    <button class="btn btn-primary c-button" style="margin-left: 0px;"
-                                                            onclick="PopUpShow();">
-                                                        <i class="fa-regular fa-heart fa-bounce"
-                                                           style="fill: var(--second-color);"></i>
-                                                        50
-                                                    </button>
+                                                <label class="label"
+                                                       style="width: fit-content; pointer-events: none;cursor: default;"
+                                                       th:text=" ${post.getLikes()}"></label>
+                                            </button>
 
-                                                    <button class="btn btn-primary c-button" style="margin-left: 10px;"
-                                                            onclick="PopUpShow();">
-                                                        <i class="fa-regular fa-comment fa-beat-fade"
-                                                           style="fill: var(--second-color);"></i>
-                                                        10
-                                                    </button>
+                                            <button class="btn btn-primary c-button"
+                                                    th:onclick="'comments(\'' + ${post.getId()} + '\');'"
+                                                    style="margin-left: 10px; width: 75px; height: 40px;">
+                                                <i class="fa-regular fa-comment fa-beat-fade"
+                                                   style="fill: var(--second-color);"></i>
+                                                <label style="width: fit-content;" th:text="100"></label>
+                                            </button>
 
-                                                    <button class="btn btn-primary c-button" style="margin-left: 10px;"
-                                                            onclick="PopUpShow();">
-                                                        <i class="fa-regular fa-eye"
-                                                           style="fill: var(--second-color);"></i>
-                                                        100
-                                                    </button>
-                                                </div>
-                                            </div>
+                                            <button class="btn btn-primary c-button"
+                                                    th:onclick="'view(\'' + ${post.getId()} + '\');'"
+                                                    style="margin-left: 10px; width: fit-content; height: 40px;">
+                                                <i class="fa-regular fa-eye" style="fill: var(--second-color);"></i>
+                                                <label style="width: fit-content;"
+                                                       th:text=" ${post.getViews()}"></label>
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
@@ -195,7 +206,8 @@
 
         <div class="col-4">
             <!--Список сообществ-->
-            <div class="block_div" style="margin-top: 50px; margin-left: 30px; width: 385px; height: 500px; position: fixed;">
+            <div class="block_div"
+                 style="margin-top: 50px; margin-left: 30px; width: 385px; height: 500px; position: fixed;">
                 <div class="block_div_no_color" style="margin-top: 0px;">
                     <br/>
                     <p class="block_p_no_color p-main-color">Рекомендации</p>
@@ -222,7 +234,10 @@
                                                 <p class="name_group_item_list" th:text="${group.getName()}"> Имя </p>
                                                 <div class="main_div_group_item_list">
                                                     <div class="icon_div_group_item_list">
-                                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg>
+                                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                                            <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                                                            <path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/>
+                                                        </svg>
                                                     </div>
                                                     <div class="subscribes_div_group_item_list">
                                                         <p class="subscribes_p_group_item_list"
@@ -244,9 +259,35 @@
 
     <div class="btn-up btn-up_hide"></div>
 </div>
-
-
 </body>
+<script>
+    function like(postId){
+        var caller = event.target;
+        const i  = caller.getElementsByTagName("i");
+        var url = "/like";
+        var n = 1;
+        var classname = "fa-solid fa-heart";
+        if(i[0].className==="fa-solid fa-heart"){
+            url = "/unlike";
+            n = -1;
+            classname = "fa-regular fa-heart fa-bounce";
+        }
+        const formData = {
+            postId: postId,
+        };
+        $.ajax({
+            url: url,
+            type: "POST",
+            data: formData,
+            success: function (response) {
+                if (response === "Success") {
+                    caller.getElementsByClassName('label').item(0).textContent = Number(caller.getElementsByClassName('label').item(0).textContent) + n;
+                    i[0].className = classname;
+                }
+            }
+        });
+    }
+</script>
 <script>
     var ad = $('#addBlock');
     var min_scroll = 20; // Set your minimum scroll amount here
