--- a/src/main/resources/templates/group.html
+++ b/src/main/resources/templates/group.html
@@ -97,6 +97,7 @@
                             <button class="btn btn-primary bet_time" onclick="subscribe();">Подписаться</button>
                         </div>
                     </div>
+
                     <main>
                         <br/>
                         <input type="file" name="image" id="image" accept="image/*"/>
@@ -104,6 +105,17 @@
                             <img class="avatar_img" id="avatar" alt="image" th:src="${group.getAvtar()}"/>
                         </div>
                     </main>
+
+                    <div class="main_div_group_item_list" style="margin-left: 710px; margin-top: -180px;">
+                        <div class="icon_div_group_item_list" style="margin-top: 5px;">
+                            <!--<i class="fa-solid fa-user" style="fill: var(&#45;&#45;main-color);"></i>-->
+                            <svg xmlns="http://www.w3.org/2000/svg" style="fill: var(--second-color);" height="15px" width="15" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg>
+                        </div>
+                        <div class="subscribes_div_group_item_list" style="margin-top: 10px;">
+                            <p class="subscribes_p_group_item_list" style="color: var(--second-color);"
+                               th:text="${group.getSubscribes()}"></p>
+                        </div>
+                    </div>
                 </div>
 
                 <form class="row justify-content-center" id="accountForm" action="#" method="post"> <!--th:action=""-->
@@ -166,7 +178,7 @@
                                 <div class="row" style="margin-top: 15px;">
                                     <div class="col align-self-center" style="margin-left: 0px; justify-content: space-between;">
                                         <div class="like-container row">
-                                            <button class="btn btn-primary" th:onclick="'like(\'' + ${post.getId()} + '\');'" style="margin-left: 0px; width: 80px; height: 40px;">
+                                            <button class="btn btn-primary" th:onclick="'like(\'' + ${post.getId()} + '\');'" style="margin-left: 0px; width: 80px; height: 40px; color: var(--second-color);">
                                                 <i class="fa-regular fa-heart fa-bounce"  style="fill: var(--second-color); pointer-events: none;cursor: default;"></i>
                                                 <div th:each="like : ${likes}" style="display: none;">
                                                     <div th:if="${like.getPostUserId().getUserId()==userLogin.getId()}">
@@ -182,7 +194,7 @@
 
                                             <button class="btn btn-primary c-button" th:onclick="'comments(\'' + ${post.getId()} + '\');'" style="margin-left: 10px; width: 75px; height: 40px;">
                                                 <i class="fa-regular fa-comment fa-beat-fade" style="fill: var(--second-color);"></i>
-                                                <label  style="width: fit-content;" th:text="100"></label>
+                                                <label  style="width: fit-content; z-index: 2;" th:text="100"></label>
                                             </button>
 
                                             <button class="btn btn-primary c-button" th:onclick="'view(\'' + ${post.getId()} + '\');'" style="margin-left: 10px; width: fit-content; height: 40px;">
@@ -230,7 +242,7 @@
                                                 <div class="main_div_group_item_list">
                                                     <div class="icon_div_group_item_list">
                                                         <!--<i class="fa-solid fa-user" style="fill: var(&#45;&#45;main-color);"></i>-->
-                                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg>
+                                                        <svg xmlns="http://www.w3.org/2000/svg" height="15px" width="15" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg>
                                                     </div>
                                                     <div class="subscribes_div_group_item_list">
                                                         <p class="subscribes_p_group_item_list"
