--- a/src/main/resources/templates/group.html
+++ b/src/main/resources/templates/group.html
@@ -111,7 +111,7 @@
                             <!--<i class="fa-solid fa-user" style="fill: var(&#45;&#45;main-color);"></i>-->
                             <svg xmlns="http://www.w3.org/2000/svg" style="fill: var(--second-color);" height="15px" width="15" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg>
                         </div>
-                        <div class="subscribes_div_group_item_list" style="margin-top: 10px;">
+                        <div class="subscribes_div_group_item_list" id="countSub" style="margin-top: 10px;">
                             <p class="subscribes_p_group_item_list" style="color: var(--second-color);"
                                th:text="${group.getSubscribes()}"></p>
                         </div>
@@ -398,6 +398,7 @@
                 if (response === "Success") {
                     $("#subButton").load(" #subButton > *");
                     $("#recGroup").load(" #recGroup > *");
+                    $("#countSub").load(" #countSub > *");
                 }
             }
         });
@@ -412,7 +413,7 @@
                 if (response === "Success") {
                     $("#subButton").load(" #subButton > *");
                     $("#recGroup").load(" #recGroup > *");
-                }
+                    $("#countSub").load(" #countSub > *");                }
             }
         });
     }
