--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -102,7 +102,7 @@
             </div>
         </div>
 
-        <div class="col-6" style="height: auto;">
+        <div class="col-6" style="height: auto; ">
             <div style="margin-top: 50px; margin-left: 50px; height: 100px; width: 600px;">
                 <div class="block_div" style="margin-top: 0px; height: 75px; width: 600px;">
                     <div>
@@ -162,20 +162,22 @@
                                             <button class="btn btn-primary"
                                                     th:onclick="'like(\'' + ${post.getId()} + '\');'"
                                                     style="margin-left: 0px; width: 80px; height: 40px;">
-                                                <i class="fa-regular fa-heart fa-bounce"
-                                                   style="fill: var(--second-color); pointer-events: none;cursor: default;"></i>
-                                                <div th:each="like : ${likes}" style="display: none;">
-                                                    <div th:if="${like.getPostUserId().getUserId()==userLogin.getId()}">
-                                                        <div th:if="${like.getPostUserId().getPostId() == post.getId()}">
-                                                            <script th:inline="javascript">
-                                                                matchLike();
-                                                            </script>
+                                                <content>
+                                                    <i class="fa-regular fa-heart fa-bounce"
+                                                       style="fill: var(--second-color); pointer-events: none;cursor: default;"></i>
+                                                    <div th:each="like : ${likes}" style="display: none;">
+                                                        <div th:if="${like.getPostUserId().getUserId()==userLogin.getId()}">
+                                                            <div th:if="${like.getPostUserId().getPostId() == post.getId()}">
+                                                                <script th:inline="javascript">
+                                                                    matchLike();
+                                                                </script>
+                                                            </div>
                                                         </div>
                                                     </div>
-                                                </div>
-                                                <label class="label"
-                                                       style="width: fit-content; pointer-events: none;cursor: default;"
-                                                       th:text=" ${post.getLikes()}"></label>
+                                                    <label class="label"
+                                                           style="width: fit-content; pointer-events: none;cursor: default;"
+                                                           th:text=" ${post.getLikes()}"></label>
+                                                </content>
                                             </button>
 
                                             <button class="btn btn-primary c-button"
