--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -239,7 +239,7 @@
                 <br/>
                 <input type="file" name="image" id="image" accept="image/*"/>
                 <div>
-                    <img class="group_img" id="avatar" alt="image" src="https://ds127-kursk-r38.gosweb.gosuslugi.ru/netcat_files/21/10/1677862132_topdevka_com_p_erotika_anastasiya_karpenko_golaya_34.jpg"/>
+                    <img class="group_img" id="avatar" alt="image" src="https://images.squarespace-cdn.com/content/v1/5da8bac9f6d96b1bf0e5cb69/1605218099656-BR0JG492R2B375WU0QLE/Green+and+Purple+Minimal+Icons+Icon+Set+%283%29.png?format=1500w"/>
                 </div>
             </main>
             <form class="row justify-content-center" id="groupCreateForm" method="get" action="#" style="margin-left: 60px; margin-top: -140px;"> <!--th:action=""-->
