--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -87,23 +87,29 @@
         <div class="col-2">
             <!--Что-то-->
             <div class="block_div"
-                 style="margin-top: 50px; margin-left: 0px; width: auto; height: 500px; position: fixed;">
+                 style="margin-top: 50px; margin-left: 0px; width: 230px; height: 500px; position: fixed;">
                 <div class="block_div_no_color" style="margin-top: 0px;">
                     <br/>
                     <p class="block_p_no_color p-main-color">Что-то</p>
                 </div>
                 <hr class="block_line"/>
-                <div style="margin-top: -2px; margin-left: -2px; height: 400px; margin-right: 10px;">
-                    <button class="btn btn-primary c-button" style="margin-left: 10px;" onclick="PopUpShow();">
-                        <i class="fa-solid fa-plus" style="fill: var(--second-color);"></i>
-                        Предложить пост
+                <div style="margin-top: -15px; margin-left: -2px; height: auto; margin-right: 10px;">
+                    <button class="btn btn-primary c-button"
+                            style="width: 150px; margin-left: 10px; margin-top: 15px;" onclick="PopUpShow();">
+                        Новости
+                    </button>
+                </div>
+                <div style="margin-top: -2px; margin-left: -2px; height: auto; margin-right: 10px;">
+                    <button class="btn btn-primary c-button"
+                            style="width: 150px; margin-left: 10px; margin-top: 15px;" onclick="PopUpShow();">
+                        Рекомендации
                     </button>
                 </div>
             </div>
         </div>
 
         <div class="col-6" style="height: auto; ">
-            <div style="margin-top: 50px; margin-left: 50px; height: 100px; width: 600px;">
+            <!--<div style="margin-top: 50px; margin-left: 50px; height: 100px; width: 600px;">
                 <div class="block_div" style="margin-top: 0px; height: 75px; width: 600px;">
                     <div>
                         <button class="btn btn-primary c-button"
@@ -118,8 +124,8 @@
                     <hr class="block_line" style="margin-top: 10px; width: 590px; margin-left: 5px;"/>
                 </div>
 
-            </div>
-            <table style="margin-top: -40px; height: 650px; width: 600px; margin-left: 50px;">
+            </div>-->
+            <table style="margin-top: 20px; height: 650px; width: 600px; margin-left: 50px;">
                 <tbody>
                 <tr th:each="post : ${posts}">
                     <td>
