--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -132,23 +132,23 @@
                         <!--Пост-->
                         <div class="block_div" style="padding: 5px 5px 20px; height: auto; margin-bottom: 5px;">
                             <div class="div_post_item_list">
-                                <div class="row" th:each="group : ${groups}">
-                                    <div class="col-2 col-md-1" th:if="${post.getIdGroup() == group.getId()}">
-                                        <img class="figure_img_post_item_list" alt="image"
-                                             th:src="${group.getAvtar()}"/>
-                                    </div>
-                                    <div class="col align-self-center" style="margin-left: -30px;"
-                                         th:if="${post.getIdGroup() == group.getId()}">
-                                        <p class="name_post_item_list p-text-color"
-                                           th:text="${group.getName()}"></p>
-                                        <div>
-                                            <p class="date_p_post_item_list p-text-color"></p>
-                                            <script th:inline="javascript">
-                                                showMessage([[${post.getDatePublication()}]]);
-                                            </script>
+                                    <div class="row" th:each="group : ${groups}" th:onclick="'toGroupPage(\'' + ${group.getId()} + '\');'">
+                                        <div class="col-2 col-md-1" th:if="${post.getIdGroup() == group.getId()}" >
+                                            <img class="figure_img_post_item_list" alt="image"
+                                                 th:src="${group.getAvtar()}"/>
+                                        </div>
+                                        <div class="col align-self-center" style="margin-left: -30px;"
+                                             th:if="${post.getIdGroup() == group.getId()}">
+                                            <p class="name_post_item_list p-text-color"
+                                               th:text="${group.getName()}"></p>
+                                            <div>
+                                                <p class="date_p_post_item_list p-text-color"></p>
+                                                <script th:inline="javascript">
+                                                    showMessage([[${post.getDatePublication()}]]);
+                                                </script>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
                                 <div class="row">
                                     <div class="col align-self-center" style="margin-left: 0px; align-content: center">
                                         <p class="p-text-color"
@@ -273,6 +273,11 @@
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    function toGroupPage(groupId){
+        window.location.href = "/group/" + groupId + "?";
+    }
+</script>
 <script>
     var ad = $('#addBlock');
     var min_scroll = 20; // Set your minimum scroll amount here
